--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,7 +2,8 @@
   register works!
 </p>
 <h3 class="text-center">Register Form</h3>
-<form [formGroup]="registerForm" novalidate class="col-sm-6 col-sm-offset-3" (ngSubmit)="registerForm.valid && onSubmit()">
+<form [formGroup]="registerForm" novalidate class="col-sm-6 col-sm-offset-3"
+      (ngSubmit)="registerForm.valid && onSubmit()">
   <div class="form-group">
     <label class="center-block">Name:
       <input type="text" class="form-control" formControlName="name">
@@ -13,16 +14,12 @@
     <label class="center-block">Password:
       <input type="password" class="form-control" formControlName="password">
     </label>
-    <input [ngClass]="{'disabled': !registerForm.valid}" type="submit" value="RegisterNow" class="form-control btn btn-block btn-success">
+    <input [ngClass]="{'disabled': !registerForm.valid}" type="submit" value="RegisterNow"
+           class="form-control btn btn-block btn-success">
   </div>
 </form>
 <div class="row">
-  <div class="alert" *ngIf="RegisterMsg" [ngClass]="{'alert-danger': !RegisterMsg.data, 'alert-success': RegisterMsg.data}">
-    {{RegisterMsg | json}}
+  <div class="alert" *ngIf="message" [ngClass]="{'alert-danger': message.error, 'alert-success': !message.error}">
+    {{message.message}}
   </div>
-  <div class="col-sm-6 col-sm-offset-3">
-    <p>Form value: {{ registerForm.value | json }}</p>
-    <p>Form value: {{ registerForm.status | json }}</p>
-  </div>
-
 </div>
