'backend:  Content Update While update data'

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -66,8 +66,8 @@
       <td>{{task.tcreatedBy}}</td>
       <td>{{task.sts}}</td>
       <td>{{task.tcreatedAt}}</td>
-      <td><a href="javascript:void(0);" (click)="editTask(task.TID)">Edit</a></td>
-      <td><a href="javascript:void(0);" (click)="deleteTask(task.TID)">Delete</a></td>
+      <td><a href="javascript:void(0);" (click)="editTask(i)">Edit</a></td>
+      <td><a href="javascript:void(0);" (click)="deleteTask(i)">Delete</a></td>
     </tr>
   </table>
 </div>
