--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -2,8 +2,9 @@
   users works!
 </p>
 <div class="container">
-  <!--<a href="javascript:void(0);" (click)="getUsers()">Get Users</a>-->
-  {{message}}
+  <div class="alert" *ngIf="message" [ngClass]="{'alert-danger': message.error, 'alert-success': !message.error}">
+    {{message.message}}
+  </div>
   <table *ngIf="users" class="table table-responsive table-stripped table-bordered">
     <tr>
       <th>Sl no</th>
@@ -18,8 +19,8 @@
       <th>{{user.name}}</th>
       <th>{{user.email}}</th>
       <th>{{user.UID}}</th>
-      <th><a href="javascript:void(0);" (click)="updateUser(user.UID)">Edit</a></th>
-      <th><a href="javascript:void(0);" (click)="deleteUser(user.UID)">Delete</a></th>
+      <th><a href="javascript:void(0);" (click)="updateUser(i)">Edit</a></th>
+      <th><a href="javascript:void(0);" (click)="deleteUser(i)">Delete</a></th>
     </tr>
   </table>
 </div>
