--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -25,32 +25,10 @@
       <td><a href="javascript:void(0);" (click)="deleteTask()">Delete</a></td>
     </tr>
   </table>
-
-  <form *ngIf="editTaskStatus" [formGroup]="editTaskGroup" novalidate class="col-sm-6 col-sm-offset-3"
-        (ngSubmit)="editTaskGroup.valid && editTaskGroup.touched && onSubmit()">
-    <div class="form-group">
-      <label class="center-block">Task Title:</label>
-      <input type="text" placeholder="Task Title here" class="form-control" formControlName="ttitle">
+  <div class="row">
+    <div class="alert col-xs-12" *ngIf="message" [ngClass]="{'alert-danger': message.error, 'alert-success': !message.error}">
+      {{message.message}}
     </div>
-    <div class="form-group">
-      <label class="center-block">Task Description:</label>
-      <textarea placeholder="Task Description here" class="form-control" formControlName="tdes"></textarea>
-    </div>
-    <div class="form-group">
-      <label class="center-block">Task Status:</label>
-      <select formControlName="sts" class="form-control">
-        <option value="">-- Select --</option>
-        <option value="0">Disable</option>
-        <option value="1">Enable</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <input [ngClass]="{'disabled': !editTaskGroup.touched}" type="submit" value="Login"
-             class="form-control btn btn-block btn-success">
-    </div>
-  </form>
-  <div class="alert" *ngIf="message" [ngClass]="{'alert-danger': message.error, 'alert-success': !message.error}">
-    {{message.message}}
   </div>
-
+  <task-edit *ngIf="editTaskStatus" [taskData]="taskData" (onSubmited)="onSubmited($event)" (getMessage)="getMessage($event)" ></task-edit>
 </div>
