'b1: backend Searver implimenting stage 1'

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -71,7 +71,7 @@
     <tr *ngFor="let task of tasks; let i = index;">
       <td>{{i+1}}</td>
       <td>
-        <b>{{task.ttitle}}</b>
+        <a href="tasks" [routerLink]="['/task/' + task.TID]">{{task.ttitle}}</a>
         <p>{{task.tdes}}</p>
       </td>
       <td>{{task.tcreatedBy}}</td>
