'b3: backend Searver implimenting stage 3'

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -57,6 +57,7 @@
   </div>
 </div>
 -->
+<button (click)="getTasks();" class="btn btn-success">Get Tasks</button>
 <div class="container">
   <table *ngIf="tasks" class="table table-responsive table-stripped table-bordered">
     <tr>
